--- a/src/components/Settings/style.scss
+++ b/src/components/Settings/style.scss
@@ -1,3 +1,23 @@
 .settings {
-  padding: 20px;
+  padding: 0;
+  border: 0;
+  box-shadow: 0;
+  border-radius: 0;
+  background: #eef;
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    li:first-child {
+      padding-top: 7px;
+    }
+    li {
+      padding: 7px 0;
+      margin: 0;
+      list-style: none;
+      white-space: nowrap;
+      outline: 0;
+      margin-left: 24px;
+    }
+  }
 }
