--- a/src/containers/Dashboard/style.scss
+++ b/src/containers/Dashboard/style.scss
@@ -7,3 +7,13 @@
   width: 100%;
   height: 100%;
 }
+
+.sider {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.shelves {
+  background: rgb(244, 245, 241);
+  font-size: 12px;
+}
