--- a/src/components/Fallback/style.scss
+++ b/src/components/Fallback/style.scss
@@ -3,5 +3,8 @@
   display:flex;
   justify-content: center;
   align-self:center;
-  background: #fff
+  margin-top: 50px;
+  font-size: 14px;
+  font-family: "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #333333
 }
