Fix responsive sider trigger on hide

--- a/src/containers/Dashboard/style.scss
+++ b/src/containers/Dashboard/style.scss
@@ -9,8 +9,10 @@
 }
 
 .sider {
-  overflow-y: auto;
-  overflow-x: hidden;
+  // overflow-y: auto;
+  // overflow-x: hidden;
+  // overflow: auto;
+  // height: '100vh';
 }
 
 .shelves {
