--- a/src/components/MultiCheckBox/style.scss
+++ b/src/components/MultiCheckBox/style.scss
@@ -1,7 +1,6 @@
 .shelvesCheckboxGroup {
-  display: inline-block;
   margin-right: 0;
-  .ant-checkbox-group-item {
-    display: block;
-  }
+  margin-top: 10px;
+  list-style: none;
+  padding: 0;
 }
