--- a/src/containers/Dashboard/style.scss
+++ b/src/containers/Dashboard/style.scss
@@ -2,7 +2,7 @@
   height: 100vh;
 }
 .mainContent {
-  background-image: url('../../components/NetworkGraph/examples/basic/tiny_grid.png');
+  // background: #fff;
   overflow: auto;
   width: 100%;
   height: 100%;
@@ -13,6 +13,7 @@
   // overflow-x: hidden;
   // overflow: auto;
   // height: '100vh';
+  max-height: 100vh;
 }
 
 .shelves {
