--- a/src/containers/BookLibrary/style.scss
+++ b/src/containers/BookLibrary/style.scss
@@ -1,7 +1,8 @@
 .bookLibrary {
   height: 100%;
   overflow: auto;
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   .ant-table {
     background: #fff;
     font-size: 0.9em;
