--- a/src/containers/Dashboard/style.scss
+++ b/src/containers/Dashboard/style.scss
@@ -1,5 +1,10 @@
 .dashboard {
   height: 100vh;
+
+  :first-child > div {
+    overflow: hidden;
+    overflow-y: scroll;
+  }
 }
 .mainContent {
   // background: #fff;
@@ -27,9 +32,4 @@
     font-size: 10px;
     padding: 0px;
   }
-}
-
-.ant-layout-sider-children {
-  overflow: hidden;
-  overflow-y: scroll;
 }
