--- a/src/containers/RelationshipGraph/style.scss
+++ b/src/containers/RelationshipGraph/style.scss
@@ -3,3 +3,10 @@
   width: 100%;
   height: 100%;
 }
+
+.graphPopover {
+  max-height: 70vh;
+  overflow: hidden;
+  overflow-y: scroll;
+  padding-right: 10px;
+}
